# givaudan

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
data/raw/: 01_histoire_givaudan.txt  02_ingredients_parfums.txt  03_pyramide_olfactive.txt  04_creation_parfum.txt  05_metiers_givaudan.txt  06_durabilite_givaudan.txt  07_tendances_aromes.txt  08_innovation_givaudan.md
frontend/: app.js  index.html  styles.css
scripts/: 01_analyze_corpus.py  02_generate_rag_answers.py  03_compare_baseline_vs_rag.py  run_all.py
src/: config.py  document_loader.py  react_agent.py  semantic_cache.py  utils.py  weaviate_rag_pipeline.py  web_agent.py
